[gd_scene load_steps=4 format=3 uid="uid://d055sx1k5uvqe"]

[ext_resource type="Script" path="res://base.gd" id="1_5nwow"]
[ext_resource type="PackedScene" uid="uid://b00p15iscd1yg" path="res://team_entry.tscn" id="2_i8mbd"]
[ext_resource type="PackedScene" uid="uid://f6tbie6hxtja" path="res://team_member_entry.tscn" id="2_kgupt"]

[node name="Base" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5nwow")
teamEntry = ExtResource("2_i8mbd")
memberEntry = ExtResource("2_kgupt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(245, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TeamListContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TeamList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TeamListContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="TeamName" type="Control" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(245, 0)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1

[node name="TeamNameEntry" type="LineEdit" parent="VBoxContainer/HBoxContainer/TeamName"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -18.5
offset_right = 100.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Team Name"

[node name="TeamNameSearchButton" type="Button" parent="VBoxContainer/HBoxContainer/TeamName"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -58.0
offset_right = 43.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 8
disabled = true
text = "Search"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Outcome" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/TeamName/TeamNameEntry" to="." method="_on_team_name_entry_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/TeamName/TeamNameEntry" to="." method="populate_team_members"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TeamName/TeamNameSearchButton" to="." method="_on_team_name_search_button_pressed"]
